<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PodcastCatcher</string>
    <string name="action_settings">Settings</string>
    <string name="subscription_title_label">Title:</string>
    <string name="subscription_subtitle_label">Subtitle:</string>
    <string name="subscription_author_label">Author:</string>
    <string name="subscription_category_label">Category:</string>
    <string name="subscription_link_label">Link:</string>
    <string name="title_activity_subscription_detail">SubscriptionDetailActivity</string>
    <string name="subscription_summary_label">Summary:</string>
    <string name="new_subscription">New Subscription</string>
    <string name="refresh_feeds">Refresh</string>
    <string name="feed_url">Feed URL</string>
    <string name="delete_subscription">Delete</string>
    <string name="title_activity_subscription_item_detail">SubscriptionItemDetailActivity</string>
    <string name="subscription_item_title">Title</string>

</resources>